/* $Id$ */

version 0.6.3 (head):

 * removing the custom leak detector ("Valgrind" program used instead)
 * videodev: new options: frequency, transfer [read|mmap], noinit
 * profiler works again (somewhat)

version 0.6.2 (2002.09.17):

 * jMax objects written in (or using) Ruby now can work in PureData too.
 * new format: SDL (portable output to window)
 * can now compile bridges without libruby.so
 * changed grid-protocol: added direct object-to-object streaming.
 * bug: gridflow's clock tick back to a decent value (sorry)
 * all inlets supporting grids also convert int/float as 0-D grids
 * @fold and @scan now accept grids in right inlet and constructor
 * @convolve is 2-3 times faster
 * %,swap% are now called rem,swaprem; new %,swap% is the true modulo.
 * @for now allows vectorial from/to/step values
 * @identity_transform removed, change to eg: [@for{0 0}{240 320}{1 1}]
 * PD users: grid literals are written like:
	[@for ( 0 0 ) ( 240 320 ) ( 1 1 )] with all those spaces
 * @inner,@inner2,@convolve can take right inlet grid as 4th argument
 * re-enabled and improved the memory leak detector (use --debug)
 * fixed many bugs and leaks
 * fixed bugs in @store
 * added sample: zoom.pd

version 0.6.1 (2002.08.29):

 * now compiling GridFlow as C++ (replacing C)
 * now you can use Ruby 1.7, which is faster
	note: if you do so, make sure your version is dated 2002
 * new objects: rubyprint, printargs, @print, @scan, @inner
 * new format: apple quicktime (using libquicktime.so)
 * @in gzip support (example: "open ppm gzfile teapot.ppm.gz")
	also works with targa and grid
 * BitPacking now supports 1 to 4 channels instead of just 3
 * using mkmf.rb makefile generation; some MSWindows support thru Cygwin
 * added geiger counter simulator in [rtmetro]
 * libruby.so is only needed when using GridFlow through jMax
 * now can do grid literals in @ and @outer, like [@ + {0 1}]
 * syntax of @redim,@import changed from [@redim 2 3] to [@redim {2 3}]